# apartment-price-predictor

./: .gitignore  README.md  analysis.ipynb  apartment-prediction-final.ipynb  apartment-prediction.ipynb  buy_rent_kenya_data.csv  main.py  presentation.md  property24_data.csv  pyproject.toml  requirements.txt  scrapy.cfg
apartment_price_scraper/: items.py  middlewares.py  pipelines.py  scrapy.cfg  settings.py
apartment_price_scraper/buyrentkenya_scraper/: items.py  middlewares.py  pipelines.py  settings.py
apartment_price_scraper/buyrentkenya_scraper/spiders/: buyrentkenya.py
apartment_price_scraper/spiders/: buyrentkenya.py
apartment_scraper/: items.py  middlewares.py  pipelines.py  settings.py
apartment_scraper/spiders/: buyrentkenya.py  property24.py
dags/: web_scraping_dag.py
