[tool.poetry]
name = "apartment-price-predictor"
version = "0.1.0"
description = "A price predictor for apartments in Kenya."
authors = ["Antony Nyagah <tony.m.nyagah@gmail.com>", "Maxwell Mogambi <https://github.com/maxwellmogambi>"]
license = "MIT"
readme = "README.md"
packages = [{include = "apartment_price_predictor"}]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.11.1"
jupyterlab = "^4.1.8"
pandas = "^2.2.2"
polars = "^0.20.22"
pyarrow = "^16.1.0"
plotly = "^5.22.0"
matplotlib = "^3.9.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
